# PictureUpgraderAndroid

./: README.md  settings.gradle
app/: build.gradle  keystore.jks
app/src/androidTest/java/com/ernesto/pictureupgrader/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  codeformer.cpp  colornet.cpp  encoder.cpp  face.cpp  generator.cpp  native-lib.cpp  pipeline.cpp  realesrgan.cpp
app/src/main/cpp/include/: codeformer.h  colornet.h  encoder.h  face.h  generator.h  model.h  pipeline.h  realesrgan.h
app/src/main/java/com/ernesto/pictureupgrader/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml  dialog_resolution_reduction.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ernesto/pictureupgrader/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
